--- a/src/rmitbot_controller/config/rmitbot_controller.yaml
+++ b/src/rmitbot_controller/config/rmitbot_controller.yaml
@@ -1,153 +1,153 @@
-# controller_manager:
-#   ros__parameters:
-#     update_rate: 100 # Hz
-#     # use_sim_time: true # set to true while using with gazebo, false for real robot
-
-#     # Load the joint trajectory controller - from the library ros2_controllers
-#     rmitbot_controller:
-#       type: diff_drive_controller/DiffDriveController
-
-#     # Load the joint state broadcaster - motor encoder values
-#     joint_state_broadcaster:
-#       type: joint_state_broadcaster/JointStateBroadcaster
-
-# rmitbot_controller:
-#   ros__parameters:
-#     type        : diff_drive_controller/DiffDriveController
-#     use_stamped_vel: true
-#     left_wheel_names  : ['front_left_wheel_joint', 'rear_left_wheel_joint']
-#     right_wheel_names : ['front_right_wheel_joint', 'rear_right_wheel_joint']
-
-#     publish_rate: 50.0               # default: 50
-#     # Odometry noise in pose and twist
-#     pose_covariance_diagonal : [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
-#     twist_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
-
-#     wheel_separation : 0.17
-#     wheel_radius : 0.033
-
-#     wheel_separation_multiplier: 1.0
-#     left_wheel_radius_multiplier: 1.0
-#     right_wheel_radius_multiplier: 1.0
-
-#     # Velocity commands timeout [s], default 0.5
-#     cmd_vel_timeout: 0.5
-
-#     # Publish limited velocity
-#     publish_limited_velocity: true
-
-#     # Publish wheel data
-#     publish_wheel_data: true
-
-#     # Publish to TF directly
-#     # The controller broadcast odom-->base_footprint_raw
-#     # The localization broadcast odom-->base_footprint
-#     enable_odom_tf: true 
-#     odom_frame_id: odom
-#     # base_frame_id: base_footprint
-#     base_frame_id: base_footprint_raw
-
-#     # Velocity and acceleration limits
-#     # Whenever a min_* is unspecified, default to -max_*
-#     linear:
-#       x:
-#         has_velocity_limits    : true
-#         max_velocity           : 10.  # m/s base 1.0
-#         min_velocity           : -10. # m/s base -0.5
-#         has_acceleration_limits: true
-#         max_acceleration       : 2.  # m/s^2 base 0.8
-#         min_acceleration       : -2. # m/s^2 base -0.4
-#         has_jerk_limits        : false
-#         max_jerk               : 5.  # m/s^3 base 5.
-#     angular:
-#       z:
-#         has_velocity_limits    : true
-#         max_velocity           : 25.  # rad/s base 1.7
-#         has_acceleration_limits: true
-#         max_acceleration       : 25.  # rad/s^2 base 1.5
-#         has_jerk_limits        : false
-#         max_jerk               : 5.  # rad/s^3 base 2.5
-
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
-    # use_sim_time: true
- 
-    # just swap the plugin here
+    update_rate: 100 # Hz
+    # use_sim_time: true # set to true while using with gazebo, false for real robot
+
+    # Load the joint trajectory controller - from the library ros2_controllers
     rmitbot_controller:
-      type: mecanum_drive_controller/MecanumDriveController
- 
-    # keep your broadcaster as-is
+      type: diff_drive_controller/DiffDriveController
+
+    # Load the joint state broadcaster - motor encoder values
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
- 
+
 rmitbot_controller:
   ros__parameters:
-    # swap the type here as well
-    type: mecanum_drive_controller/MecanumDriveController
- 
-    # timeout for stale commands
-    reference_timeout: 0.9
- 
-    # command joints (front/rear, left/right)
-    front_left_wheel_name:  front_left_wheel_joint
-    front_right_wheel_name: front_right_wheel_joint
-    rear_left_wheel_name:   rear_left_wheel_joint
-    rear_right_wheel_name:  rear_right_wheel_joint
- 
- 
-    # kinematics: wheel size & geometry
-    wheel_base: 0.16
-    wheel_separation: 0.169
-    wheels_radius: 0.033
+    type        : diff_drive_controller/DiffDriveController
+    use_stamped_vel: true
+    left_wheel_names  : ['front_left_wheel_joint', 'rear_left_wheel_joint']
+    right_wheel_names : ['front_right_wheel_joint', 'rear_right_wheel_joint']
+
+    publish_rate: 50.0               # default: 50
+    # Odometry noise in pose and twist
+    pose_covariance_diagonal : [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
+    twist_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
+
+    wheel_separation : 0.17
+    wheel_radius : 0.033
+
     wheel_separation_multiplier: 1.0
-    front_left_wheel_radius_multiplier: 1.0
-    rear_left_wheel_radius_multiplier: 1.0
-    front_right_wheel_radius_multiplier: 1.0
-    rear_right_wheel_radius_multiplier: 1.0
- 
-    # keep your TF settings
-    tf_frame_prefix_enable: false
-    tf_frame_prefix: ""
-    odom_frame_id:  odom
-    base_frame_id:  base_footprint_raw
- 
-    # reuse your covariances
-    pose_covariance_diagonal:   [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
-    twist_covariance_diagonal:  [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
-    position_feedback: true
-    open_loop: false
-    enable_odom_tf: true
- 
-     # Command handling
+    left_wheel_radius_multiplier: 1.0
+    right_wheel_radius_multiplier: 1.0
+
+    # Velocity commands timeout [s], default 0.5
     cmd_vel_timeout: 0.5
-    publish_limited_velocity: false
-    velocity_rolling_window_size: 10
-    publish_rate: 50.0
+
+    # Publish limited velocity
+    publish_limited_velocity: true
+
+    # Publish wheel data
+    publish_wheel_data: true
+
+    # Publish to TF directly
+    # The controller broadcast odom-->base_footprint_raw
+    # The localization broadcast odom-->base_footprint
+    enable_odom_tf: true 
+    odom_frame_id: odom
+    # base_frame_id: base_footprint
+    base_frame_id: base_footprint_raw
+
+    # Velocity and acceleration limits
+    # Whenever a min_* is unspecified, default to -max_*
+    linear:
+      x:
+        has_velocity_limits    : true
+        max_velocity           : 10.  # m/s base 1.0
+        min_velocity           : -10. # m/s base -0.5
+        has_acceleration_limits: true
+        max_acceleration       : 2.  # m/s^2 base 0.8
+        min_acceleration       : -2. # m/s^2 base -0.4
+        has_jerk_limits        : false
+        max_jerk               : 5.  # m/s^3 base 5.
+    angular:
+      z:
+        has_velocity_limits    : true
+        max_velocity           : 25.  # rad/s base 1.7
+        has_acceleration_limits: true
+        max_acceleration       : 25.  # rad/s^2 base 1.5
+        has_jerk_limits        : false
+        max_jerk               : 5.  # rad/s^3 base 2.5
+
+# controller_manager:
+#   ros__parameters:
+#     update_rate: 100  # Hz
+#     # use_sim_time: true
  
-    # Velocity limits
-    linear.x.has_velocity_limits: false
-    linear.x.has_acceleration_limits: false
-    linear.x.has_jerk_limits: false
-    linear.x.max_velocity: 10.
-    linear.x.min_velocity: -10.
-    linear.x.max_acceleration: 5.
-    linear.x.max_jerk: 2.
-    linear.x.min_jerk: -2.
-    linear.y.has_velocity_limits: false
-    linear.y.has_acceleration_limits: false
-    linear.y.has_jerk_limits: false
-    linear.y.max_velocity: 10.
-    linear.y.min_velocity: -10.
-    linear.y.max_acceleration: 5.
-    linear.y.max_jerk: 2.
-    linear.y.min_jerk: -2.
-    angular.z.has_velocity_limits: false
-    angular.z.has_acceleration_limits: false
-    angular.z.has_jerk_limits: false
-    angular.z.max_velocity: 25.
-    angular.z.min_velocity: -25.
-    angular.z.max_acceleration: 25.
-    angular.z.min_acceleration: -25.
-    angular.z.max_jerk: 5.
-    angular.z.min_jerk: -5.
+#     # just swap the plugin here
+#     rmitbot_controller:
+#       type: mecanum_drive_controller/MecanumDriveController
+ 
+#     # keep your broadcaster as-is
+#     joint_state_broadcaster:
+#       type: joint_state_broadcaster/JointStateBroadcaster
+ 
+# rmitbot_controller:
+#   ros__parameters:
+#     # swap the type here as well
+#     type: mecanum_drive_controller/MecanumDriveController
+ 
+#     # timeout for stale commands
+#     reference_timeout: 0.9
+ 
+#     # command joints (front/rear, left/right)
+#     front_left_wheel_name:  front_left_wheel_joint
+#     front_right_wheel_name: front_right_wheel_joint
+#     rear_left_wheel_name:   rear_left_wheel_joint
+#     rear_right_wheel_name:  rear_right_wheel_joint
+ 
+ 
+#     # kinematics: wheel size & geometry
+#     wheel_base: 0.16
+#     wheel_separation: 0.169
+#     wheels_radius: 0.033
+#     wheel_separation_multiplier: 1.0
+#     front_left_wheel_radius_multiplier: 1.0
+#     rear_left_wheel_radius_multiplier: 1.0
+#     front_right_wheel_radius_multiplier: 1.0
+#     rear_right_wheel_radius_multiplier: 1.0
+ 
+#     # keep your TF settings
+#     tf_frame_prefix_enable: false
+#     tf_frame_prefix: ""
+#     odom_frame_id:  odom
+#     base_frame_id:  base_footprint_raw
+ 
+#     # reuse your covariances
+#     pose_covariance_diagonal:   [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
+#     twist_covariance_diagonal:  [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
+#     position_feedback: true
+#     open_loop: false
+#     enable_odom_tf: true
+ 
+#      # Command handling
+#     cmd_vel_timeout: 0.5
+#     publish_limited_velocity: false
+#     velocity_rolling_window_size: 10
+#     publish_rate: 50.0
+ 
+#     # Velocity limits
+#     linear.x.has_velocity_limits: false
+#     linear.x.has_acceleration_limits: false
+#     linear.x.has_jerk_limits: false
+#     linear.x.max_velocity: 10.
+#     linear.x.min_velocity: -10.
+#     linear.x.max_acceleration: 5.
+#     linear.x.max_jerk: 2.
+#     linear.x.min_jerk: -2.
+#     linear.y.has_velocity_limits: false
+#     linear.y.has_acceleration_limits: false
+#     linear.y.has_jerk_limits: false
+#     linear.y.max_velocity: 10.
+#     linear.y.min_velocity: -10.
+#     linear.y.max_acceleration: 5.
+#     linear.y.max_jerk: 2.
+#     linear.y.min_jerk: -2.
+#     angular.z.has_velocity_limits: false
+#     angular.z.has_acceleration_limits: false
+#     angular.z.has_jerk_limits: false
+#     angular.z.max_velocity: 25.
+#     angular.z.min_velocity: -25.
+#     angular.z.max_acceleration: 25.
+#     angular.z.min_acceleration: -25.
+#     angular.z.max_jerk: 5.
+#     angular.z.min_jerk: -5.
